fix(styles): better alignment for navbar labels

--- a/components/common/layout/navbar.scss
+++ b/components/common/layout/navbar.scss
@@ -1,25 +1,30 @@
 @import 'responsiveness';
 @import 'variables';
 
+$navbar-base-height: 42px;
+
 .navbar {
   align-items: flex-start;
   display: flex;
   flex-direction: row;
   padding: 1.5rem;
 
+  &__logo {
+    height: $navbar-base-height;
+    width: $navbar-base-height;
+  }
+
   &__title-container {
     display: flex;
     font-size: $default-font-size;
     letter-spacing: 1px;
-    line-height: 22px;
+    line-height: $default-font-size;
     margin: 0 18px;
-    padding-top: 5px;
+    min-height: $navbar-base-height;
     text-transform: uppercase;
   }
 
   &__title {
-    padding-bottom: 10px;
-
     &--screen-wide {
       display: none;
     }
@@ -60,7 +65,13 @@
     }
 
     &__title {
-      padding-right: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+
+      &:not(:last-child) {
+        padding-right: 20px;
+      }
 
       &--screen-wide {
         display: unset;
@@ -85,9 +96,14 @@
   .navbar {
     &__title-container {
       flex-direction: column;
+      justify-content: space-around;
     }
 
     &__title {
+      &:not(:last-child) {
+        padding-bottom: 10px;
+      }
+
       &--screen-narrow {
         display: unset;
       }
